--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Displaying the content fetched from the endpoint -->
     <h1>Task 1 - Products</h1>
     <p> Fetched the data from the API Endpoint and showcased it on the page </p>
-    <p> *(Wait for a few seconds for it to load or reload the page if not displaying). </p>
+    <p> *(Wait for a few seconds for it to load, or reload the page if it's not displaying anything). </p>
     <div class="product-container" id="productContainer"></div>
 
     <!-- function to display the fetched data from the converted json endpoint-->
